--- a/index.html
+++ b/index.html
@@ -135,6 +135,49 @@
 								</div>
         </div>
       </section>
+        <section class="section-tours">
+          <div class="u-center-text u-margin-bottom-big">
+            <h2 class="heading-secondary">
+              Most popular tours
+          </h2>
+        
+          <div class="row">
+            <div class="col-1-of-3">
+              <div class="card">
+                <div class="card__side card__side--front">
+                <div class="card__picture card__picture--1">
+                  &nbsp;
+                </div>
+                
+                <h4 class="card__heading">
+                  <span class="card__heading-span card__heading-span--1">
+                  satz the sea explore
+                </span>
+              </h4>
+                <div class="card__details">
+                  <ul>
+                    <li>saz</li>
+                    <li>abc</li>
+                    <li>123</li>
+                    <li>sdhb</li>
+                    <li>uhd</li>
+                  </ul>
+                </div>
+                </div>
+              <div class="card__side card__side--back card__side--back-1">
+                  back
+              </div>
+                </div>
+            </div>
+            <div class="col-1-of-3">
+              col-1-of-3
+            </div>
+            <div class="col-1-of-3">
+              col-1-of-3
+            </div>
+          </div>
+
+        </section>
     </main>
     <!--
   <section class="grid-test">
