--- a/index.html
+++ b/index.html
@@ -241,6 +241,13 @@
             </div>
          </section>
          <section class="section-stories">
+            <div class="bg-video">
+               <video class="bg-video__content" autoplay muted loop>
+                  <source scr="https://storage.coverr.co/videos/coverr-mountain-hikers-1570352423798?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJhcHBJZCI6IjExNDMyN0NEOTRCMUFCMTFERTE3IiwiaWF0IjoxNTc0ODY3OTgxfQ.Lj_03mS2SjQSHxQqV15csWKVeUzG8w2cTokIR3JpwRU" type="video/mp4">
+                     <source scr="https://storage.coverr.co/videos/coverr-mountain-hikers-1570352423798?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJhcHBJZCI6IjExNDMyN0NEOTRCMUFCMTFERTE3IiwiaWF0IjoxNTc0ODY3OTgxfQ.Lj_03mS2SjQSHxQqV15csWKVeUzG8w2cTokIR3JpwRU" type="video/webm">
+                        your browser is not supported!
+               </video>
+            </div>
           <div class="u-center-text u-margin-bottom-big">
             <h2 class="heading-secondary">
                 we made a people genuinely happy
