--- a/index.html
+++ b/index.html
@@ -243,8 +243,8 @@
          <section class="section-stories">
             <div class="bg-video">
                <video class="bg-video__content" autoplay muted loop>
-                  <source scr="https://storage.coverr.co/videos/coverr-mountain-hikers-1570352423798?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJhcHBJZCI6IjExNDMyN0NEOTRCMUFCMTFERTE3IiwiaWF0IjoxNTc0ODY3OTgxfQ.Lj_03mS2SjQSHxQqV15csWKVeUzG8w2cTokIR3JpwRU" type="video/mp4">
-                     <source scr="https://storage.coverr.co/videos/coverr-mountain-hikers-1570352423798?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJhcHBJZCI6IjExNDMyN0NEOTRCMUFCMTFERTE3IiwiaWF0IjoxNTc0ODY3OTgxfQ.Lj_03mS2SjQSHxQqV15csWKVeUzG8w2cTokIR3JpwRU" type="video/webm">
+                  <source src="https://storage.coverr.co/videos/coverr-mountain-hikers-1570352423798?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJhcHBJZCI6IjExNDMyN0NEOTRCMUFCMTFERTE3IiwiaWF0IjoxNTc0ODY3OTgxfQ.Lj_03mS2SjQSHxQqV15csWKVeUzG8w2cTokIR3JpwRU" type="video/mp4">
+                     <source src="https://storage.coverr.co/videos/coverr-mountain-hikers-1570352423798?token=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJhcHBJZCI6IjExNDMyN0NEOTRCMUFCMTFERTE3IiwiaWF0IjoxNTc0ODY3OTgxfQ.Lj_03mS2SjQSHxQqV15csWKVeUzG8w2cTokIR3JpwRU" type="video/webm">
                         your browser is not supported!
                </video>
             </div>
@@ -281,6 +281,53 @@
               <div class="u-center-text u-margin-top-huge">
                   <a href="#" class="btn-text">Read all story &rarr; </a>
                </div>  
+         </section>
+
+         <section class="section-book">
+            <div class="row">
+               <div class="book">
+                  <div class="book__form">
+                  <form action="#" class="form">
+                        <div class="u-margin-bottom-medium">
+                              <h2 class="heading-secondary">
+                                  start booking now
+                              </h2> 
+                        </div>
+                     <div class="form__group">
+                        <input type="text" class="form__input" placeholder="Full name" id="name" required>
+                        <label for="name" class="form__label">Full name</label>
+                     </div>
+                     <div class="form__group">
+                           <input type="email" class="form__input" placeholder="Email address" id="email" required>
+                           <label for="email" class="form__label">Email address</label>
+                     </div>
+
+                     <div class="form__group">
+
+                        <div class="form__radio-group u-margin-bottom-small">
+                           <input type="radio" class="form__radio-input" id="small" name="size">
+                           <label for="small" class="form__radio-label">
+                              <span class="form__radio-button"></span>
+                              Small tour group
+                           </label>
+                        </div>
+                        <div class="form__radio-group">
+                              <input type="radio" class="form__radio-input" id="large" name="size">
+                              <label for="large" class="form__radio-label">
+                                 <span class="form__radio-button"></span>
+                                 Large tour group
+                              </label>
+                        </div>  
+
+                     </div>
+                           <div class="form__group">
+                            <button class="btn btn--green">Next step &rarr; </button>
+                           </div>
+                  </form>
+               </div>
+               </div>
+            </div>
+            
          </section>
       </main>
       <!--
