--- a/index.html
+++ b/index.html
@@ -330,6 +330,30 @@
             
          </section>
       </main>
+   <footer class="footer">
+       <div class="footer__logo-box">
+         <img src="https://i.imgur.com/o07zESP.png" alt="full logo" class="footer__logo">
+      </div>
+      <div class="row">
+         <div class="col-1-of-2">
+            <div class="footer__navigation">
+               <ul class="footer__list">
+                  <li class="footer__item"><a href="#" class="footer__link">Company</a></li>
+                  <li class="footer__item"><a href="#" class="footer__link">Contact Us</a></li>
+                  <li class="footer__item"><a href="#" class="footer__link">carrers</a></li>
+                  <li class="footer__item"><a href="#" class="footer__link">privacy policy</a></li>
+                  <li class="footer__item"><a href="#" class="footer__link">terms</a></li>
+               </ul>
+            </div>
+         </div>
+         <div class="col-1-of-2">
+            <p class="footer__copyright">
+               Build my <a href="https://github.com/rsatheeshkumar?tab=repositories" class="footer__link">Satheeshkumar</a> git repository It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English.
+            </p>
+         </div>
+      </div>
+
+   </footer>
       <!--
          <section class="grid-test">
            <div class="row">
