copy right added

--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
          </div>
          <div class="col-1-of-2">
             <p class="footer__copyright">
-               Build my <a href="https://github.com/rsatheeshkumar?tab=repositories" class="footer__link">Satheeshkumar</a> git repository It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English.
+               &copy; Build my <a href="https://github.com/rsatheeshkumar?tab=repositories" class="footer__link">Satheeshkumar</a> git repository  copy right &copy; It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using 'Content here, content here', making it look like readable English.
             </p>
          </div>
       </div>
